"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2005-11-06	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-65-parser-03-04:
	  Configure/Makefile changes only: cxx_version.h, 
		lexer/lex_version.h, and parser/yacc_version.h are now
		generated at configure-time.  


	* ARTXX-00-01-04-main-00-65-parser-03-03:
	  Added more configuration header dependencies in Makefile.am.  
	  Added initial files for managing file inclusion and path
		searching for included files.  (not complete yet)
	  Minor fix in token_quoted_string::what().
	  lexer/hac_lex.*: removed unused off (offset) field.
	  Added import "file"; skeletal support to hackt lexer and parser.  
		Parser error outputs all shifted by one state.  
		Tests have been updated.  
	  TODO: open referenced files using include paths.  


2005-11-04	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-65-parser-03-02:
	  Added more configuration detection headers for use with 
		main/version.cc.  Now includes CXX, LEX, YACC versions.  
	  Next: lexer file stack, possibly include search paths...
		NOTE: may have to update parser test outputs.  


	* ARTXX-00-01-04-main-00-65-parser-03-01:
	  Parser related activity.  
	  There has been a request for #include feature, so that will
		be one goal for this branch.
	  In this revision:
		renamed all lexer/parser files art++ -> hackt.
	  Minor fix in an awk script to remove hard-coded name.  


2005-11-03	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-65:
	  No source change, just Makefile adjustment to fix problem where
		test scripts would depend on . being in user's path.  
		Thanks to Arvind Kumar for reporting.  


	* ARTXX-00-01-04-main-00-64-merged-cflat-03-02:
	  Merged major cflat functionality from -cflat-03 branch.  
	  A good time to announce a pre-release.  

