@@ -2,7 +2,7 @@
 	\file "main/create.cc"
 	Unrolls an object file, saves it to another object file.  
 
-	$Id: create.cc,v 1.4 2005/09/14 15:30:36 fang Exp $
+	$Id: create.cc,v 1.4.14.1 2005/11/07 08:55:11 fang Exp $
  */
 
 #define	ENABLE_STACKTRACE		0
@@ -89,7 +89,7 @@ create::main(const int argc, char* argv[], const global_options&) {
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 void
 create::usage(void) {
-	cerr << "Usage: " << name <<
+	cerr << "usage: " << name <<
 		" <hackt-obj-infile> <hackt-obj-outfile>" << endl;
 }
 
