@@ -3,7 +3,7 @@
 	Unrolls an object file, saves it to another object file.  
 	This file was reincarnated from "artobjunroll.cc" in a previous life.  
 
-	$Id: unroll.cc,v 1.4 2005/09/14 15:30:36 fang Exp $
+	$Id: unroll.cc,v 1.4.14.1 2005/11/07 08:55:12 fang Exp $
  */
 
 #define	ENABLE_STACKTRACE		0
@@ -91,7 +91,7 @@ unroll::main(const int argc, char* argv[], const global_options&) {
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 void
 unroll::usage(void) {
-	cerr << "Usage: " << name <<
+	cerr << "usage: " << name <<
 		" <hackt-obj-infile> <hackt-obj-outfile>" << endl;
 }
 
