@@ -1,8 +1,15 @@
 # "src/util/ChangeLog"
 
+2005-11-07	David Fang		<fangism@users.sourceforge.net>
+
+	* ARTXX-00-01-04-main-00-65-parser-03-05:
+	  Added configured util/dirent.h, and wrapper functions direct.cc.
+	  Typo fix in unique_list::push() parameter.
+
+
 2005-11-06	David Fang		<fangism@users.sourceforge.net>
 
-	* ARTXX-00-01-04-main-00-65;parser-03-03:
+	* ARTXX-00-01-04-main-00-65-parser-03-03:
 	  Added util/unique_stack.{h,tcc}.
 	  Completed more list interface to unique_list.
 
