@@ -3,6 +3,16 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "main/version.cc".
 
+2005-11-07	David Fang		<fangism@users.sourceforge.net>
+
+	* ARTXX-00-01-04-main-00-65-parser-03-05:
+	  Makefile.am: clean-up and making some dependencies omre precise.  
+	  main/version.cc: more configuration information added:
+		build/host and various CXXFLAGS used in compilation.  
+	  main/compile.cc: working towards function include path searching, 
+		not there yet...
+
+
 2005-11-06	David Fang		<fangism@users.sourceforge.net>
 
 	* ARTXX-00-01-04-main-00-65-parser-03-04:
